--- a/Notepad2.vcxproj
+++ b/Notepad2.vcxproj
@@ -133,6 +133,7 @@
     <ClCompile Include="memoryManagement.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="commheaders.h" />
     <ClInclude Include="fileFunctionality.h" />
     <ClInclude Include="fileOperations.h" />
     <ClInclude Include="main.h" />
